app/app.css
@import url('https://fonts.googleapis.com/css?family=Jomhuria');

.push-top {
  margin-top: 10px;
}

.non-interactive {
  user-select: none;
  cursor: pointer;
}

.pointer {
  cursor: pointer;
}

html {
  width: 100%;
  height: 100%;
}

body {
  min-width: 1024px;
  width: 100%;
  height: 100%;
  background-image: url(images/background.jpg);
  font-size: 16px;
  font-family: 'Poppins', sans-serif;
  color: white;
}

a:visited,
a:active,
a:link {
  color: white;
  text-decoration: none;
}

a:hover {
  font-weight: bold;
  color: #ddc271;
}

#ng-view {
  width: 100%;
  height: 100%;
}


/* NAVIGATION */
.navigationbar {
  background-image: url('images/navigationbg.png');
  background-repeat: repeat-x;
  background-size: cover;
  width: 100%;
  height: 100px;
}

.navigationbar .navigationbar-content {
  margin-left: auto;
  margin-right: auto;
  width: 1024px;
}

.navigationbar .thrallbrowser-logo {
  padding-top: 5px;
  padding-left: 40px;
  vertical-align: middle;
  line-height: 24px;
  position: absolute;
  font-family: 'poppins';
}

.navigationbar .servername {
  text-align: center;
  font-family: 'poppins';
  display: block;
  font-size: 24px;
  padding-top: 5px;
  color: #DDC271;
}

.navigationbar .navigationbar-buttons {
  width: 100%;
  display: flex;
  justify-content: center;
}

.navigationbar .navigationbar-buttons .navigationbutton {
  font-family: 'Poppins', sans-serif;
  font-weight: 400;
  font-size: 20px;
  background-size: contain;
  text-align: center;
  width: 256px;
  height: 64px;
  padding-top: 11px;
  user-select: none;
  display: inline-block;
  background-image: url('images/button_normal.png');
}

.navigationbar .navigationbutton.active {
  background-image: url('images/button_hover.png');
}

.navigationbar .navigationbutton:hover {
  background-image: url('images/button_pressed.png');
  cursor: pointer;
}

.navigationbar .navigationbutton .navigationbutton-text {
  margin-left: auto;
  margin-right: auto;
}

.navigationbar .navigationbutton + .navigationbutton {
  margin-left: 100px;
}

/* MAIN NAVIGATION */
.main-navigationbar {
  background-image: url('images/navigationbg.png');
  background-repeat: repeat-x;
  background-size: cover;
  width: 100%;
  height: 100px;
}

.main-navigationbar .navigationbar-content {
  margin-left: auto;
  margin-right: auto;
  width: 1024px;
}

.main-navigationbar .main-navigation-title {
  text-align: center;
  font-family: 'poppins';
  display: block;
  font-size: 24px;
  padding-top: 5px;
  color: #DDC271;
}

.main-navigationbar .navigationbar-buttons {
  width: 100%;
  display: flex;
  justify-content: center;
}

.main-navigationbar .navigationbar-buttons .navigationbutton {
  font-family: 'Poppins', sans-serif;
  font-weight: 400;
  font-size: 20px;
  background-size: contain;
  text-align: center;
  width: 256px;
  height: 64px;
  padding-top: 11px;
  user-select: none;
  display: inline-block;
  background-image: url('images/button_normal.png');
}

.main-navigationbar .navigationbutton.active {
  background-image: url('images/button_hover.png');
}

.main-navigationbar .navigationbutton:hover {
  background-image: url('images/button_pressed.png');
  cursor: pointer;
}

.main-navigationbar .navigationbutton .navigationbutton-text {
  margin-left: auto;
  margin-right: auto;
}

.main-navigationbar .navigationbutton + .navigationbutton {
  margin-left: 100px;
}

/* COMPONENTS */
.main-container {
  margin-bottom: 100px;
  margin-top: 20px;
  border-radius: 25px;
  padding: 20px;
  width: 100%;
  max-width: 1024px;
  position: relative;
  padding-top: 20px;
  margin-left: auto;
  margin-right: auto;
  background-color: black;
}

.widget-container {
  margin-top: 20px;
  border-radius: 25px;
  padding: 20px;
  width: 100%;
  position: relative;
  padding: 20px;
  background-color: black;
}


/* SERVER */
.serverview {
  width: 1024px;
}

.serverview.container {
  padding-left: 0;
  padding-right: 0;
}

.serverview .widget-title {
  color: #DDC271;
}

.serverview .playerlist.itemlist .itemlist-header.character-name .fa-steam-square {
  margin-right: 5px;
}

.serverview .playerlist.itemlist .itemlist-item .character-name {
  display: inline-block;
  margin-left: 5px;
}

.serverview .playerlist.itemlist .itemlist-item .clan-name {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

/* SERVER LIST */
.serverlistview .serverlist.itemlist .itemlist-item .server-name,
.serverlistview .serverlist.itemlist .itemlist-item .ip-address,
.serverlistview .serverlist.itemlist .itemlist-item .last-sync {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.serverlistview .serverlist.itemlist .itemlist-item {
  cursor: pointer;
}

/* CLAN */
.clanview .playername-search {
  width: 50%;
}

.clanview .playerlist.itemlist .itemlist-header.character-name .fa-steam-square {
  margin-right: 5px;
}

.clanview .playerlist.itemlist .itemlist-item .character-name {
  display: inline-block;
  margin-left: 5px;
}


/* CHARACTER */
.characterview .widget-title {
  color: #DDC271;
  font-size: 18px;
  font-weight: bold;
}

/* ITEM LIST*/
.itemlist .itemlist-header {
  height: 30px;
  line-height: 30px;
  font-size: 18px;
  vertical-align: middle;
  font-weight: bold;
  color: #DDC271;
}

.itemlist .itemlist-empty {
  text-align: center;
  font-size: 20px;
  height: 30px;
  line-height: 30px;
}

.itemlist .itemlist-item {
  height: 25px;
  line-height: 25px;
  font-size: 16px;
  vertical-align: middle;
}

.itemlist .itemlist-item:hover {
  color: #DDC271;
  background-color: #050505;
}


/* INPUTS */
input.search-input {
  outline-color: transparent;
  background-color: #191919;
  font-weight: bold;
  padding: 5px;
  height: 30px;
  border-radius: 5px;
}

input.search-input::placeholder {
  color: #AAA;
}


/* PLAYER LIST */
.playerlistview .playername-search {
  width: 100%;
}

.playerlistview .filter-online {
  margin: 0;
  display: inline-block;
  float: right;
  line-height: 30px;
  height: 30px;
  vertical-align: middle
}

.playerlistview .filter-online input {
  width: 20px;
  height: 20px;
  margin: 0;
  vertical-align: middle;
  margin-left: 5px;
}

.playerlistview .playerlist.itemlist .itemlist-item .character-name {
  display: inline-block;
  margin-left: 5px;
}


/* CLAN LIST */
.clanlistview .clanname-search {
  width: 50%;
}

.clanlistview .clanlist.itemlist .itemlist-header.character-count,
.clanlistview .clanlist.itemlist .itemlist-item .character-count {
  text-align: right;
}

/* SPINNER */
/* Lightweight spinner from https://stephanwagner.me/only-css-loading-spinner */
@keyframes spinner {
  to {transform: rotate(360deg);}
}
.spinner:before {
  content: '';
  box-sizing: border-box;
  position: absolute;
  top: 50%;
  left: 50%;
  width: 20px;
  height: 20px;
  margin-top: -10px;
  margin-left: -10px;
  border-radius: 50%;
  border: 2px solid #ccc;
  border-top-color: #333;
  animation: spinner .6s linear infinite;
}

